--- a/public/style.css
+++ b/public/style.css
@@ -1,72 +1,76 @@
 @import url('https://fonts.googleapis.com/css?family=Iceland:700|Iceland:400');
 
 :root {
---text-50: #eae9fc;
---text-100: #d6d2f9;
---text-200: #ada5f3;
---text-300: #8478ed;
---text-400: #5b4be7;
---text-500: #321fe0;
---text-600: #2818b4;
---text-700: #1e1287;
---text-800: #140c5a;
---text-900: #0a062d;
---text-950: #050316;
+--text: #ddf7ee;
+--background: #061713;
+--primary: #93e4cc;
+--secondary: #7d1f46;
+--accent: #d49851;
 
---background-50: #ebebfa;
---background-100: #d6d6f5;
---background-200: #adadeb;
---background-300: #8585e0;
---background-400: #5c5cd6;
---background-500: #3333cc;
---background-600: #2929a3;
---background-700: #1f1f7a;
---background-800: #141452;
---background-900: #0a0a29;
---background-950: #050514;
+--text-50: #e7ecfe;
+--text-100: #cedafd;
+--text-200: #9db5fb;
+--text-300: #6c8ff9;
+--text-400: #3b6af7;
+--text-500: #0a45f5;
+--text-600: #0837c4;
+--text-700: #062993;
+--text-800: #041c62;
+--text-900: #020e31;
+--text-950: #010718;
 
---primary-50: #eaeafb;
---primary-100: #d6d4f7;
---primary-200: #ada9ef;
---primary-300: #847ee7;
---primary-400: #5b54de;
---primary-500: #3129d6;
---primary-600: #2821ab;
---primary-700: #1e1881;
---primary-800: #141056;
---primary-900: #0a082b;
---primary-950: #050415;
+--background-50: #e6eefe;
+--background-100: #ceddfd;
+--background-200: #9cbafc;
+--background-300: #6b98fa;
+--background-400: #3976f9;
+--background-500: #0854f7;
+--background-600: #0643c6;
+--background-700: #053294;
+--background-800: #032163;
+--background-900: #021131;
+--background-950: #010819;
 
---secondary-50: #e7e5ff;
---secondary-100: #cfccff;
---secondary-200: #9e99ff;
---secondary-300: #6e66ff;
---secondary-400: #3d33ff;
---secondary-500: #0d00ff;
---secondary-600: #0a00cc;
---secondary-700: #080099;
---secondary-800: #050066;
---secondary-900: #030033;
---secondary-950: #01001a;
+--primary-50: #e6ecfe;
+--primary-100: #ced8fd;
+--primary-200: #9db1fb;
+--primary-300: #6b8afa;
+--primary-400: #3a63f8;
+--primary-500: #093cf6;
+--primary-600: #0730c5;
+--primary-700: #052494;
+--primary-800: #041862;
+--primary-900: #020c31;
+--primary-950: #010619;
 
---accent-50: #e6e5ff;
---accent-100: #ceccff;
---accent-200: #9c99ff;
---accent-300: #6b66ff;
---accent-400: #3a33ff;
---accent-500: #0800ff;
---accent-600: #0700cc;
---accent-700: #050099;
---accent-800: #030066;
---accent-900: #020033;
---accent-950: #01001a;
+--secondary-50: #fee6e8;
+--secondary-100: #fdced0;
+--secondary-200: #fb9da1;
+--secondary-300: #fa6b72;
+--secondary-400: #f83a44;
+--secondary-500: #f60915;
+--secondary-600: #c50711;
+--secondary-700: #94050c;
+--secondary-800: #620408;
+--secondary-900: #310204;
+--secondary-950: #190102;
 
-
+--accent-50: #fef6e6;
+--accent-100: #fdedce;
+--accent-200: #fcda9c;
+--accent-300: #fac86b;
+--accent-400: #f9b639;
+--accent-500: #f7a308;
+--accent-600: #c68306;
+--accent-700: #946205;
+--accent-800: #634103;
+--accent-900: #312102;
+--accent-950: #191001;
 }
 body {
     font-family: sans-serif;
     margin: 0;
-    background-color: var(--background-950);
+    background-color: var(--background);
 }
 nav {
 	height: 7vh;
