--- a/public/style.css
+++ b/public/style.css
@@ -70,7 +70,7 @@
 body {
     font-family: sans-serif;
     margin: 0;
-    background-color: var(--background);
+    background-color: #000;
 }
 nav {
 	height: 7vh;
